MCDawn 1.0.1.5
-Added !url IRC command (Type !url in the channel of the IRC bot and the server will say the URL of the server).
-ProfanityFilter fixed to work properly, and not throw OutOfMemoryExceptions.
-Anti-Caps and Anti-Spam features fixed to work properly now.

MCDawn 1.0.1.4
-Building commands "throttle" redone, now goes on a scale of 1 to 200 (Determines how many blocks to set in 100 ms).
-Updated Commands
	-/spleef players - Shows status of all players in spleef.
	-/ignore - Cannot ignore ops if Server.allowIgnoreOps is false.
	-/gun - Fixed so if you have gun enabled while allowguns on your level is false, it will automatically stop.
	-/missile - Fixed so if you have missile enabled while allowguns on your level is false, it will automatically stop.
	-/throttle - Goes on a scale of 1-200 now.
	-/newlvl - Changed level creation size maximum to the MaxValue of Int32 in .NET (over 2 billion), for permission 100 (Admin) and higher.
	-/abort - Clears your stored message if you chose to extend it with putting a > or < at the end now.
-New Commands
	-/hallowguns - Toggle gun use on your home map.
-If MySQL is not configured properly the error log will also show now.
-CRITICAL: Updated minecraft.net server list heartbeat url from http://www.minecraft.net/heartbeat.jsp to https://minecraft.net/heartbeat.jsp.

MCDawn 1.0.1.3
-Color codes are no longer sent to IRC/Global.
-Ranking/banning 'reasons' can now be assigned.
-Updated Commands
	-/displayname - Allows up to 60 characters (including color codes), instead of just 16 now.
	-/me - Shows displayname instead of real name now.
	-/logoutmessage - Fixed error where if logouts.txt file did not exist it would throw an error.
	-/impersonate - Fixed bug where if message is not given it throws an error.
	-/banip - Fixed small bug where when a user xbans a player, the ip-ban would kick the player instead of the xban message.
	-/hzone del - Works as intended now.