@@ -2,6 +2,8 @@ MCDawn 1.0.1.5
 -Added !url IRC command (Type !url in the channel of the IRC bot and the server will say the URL of the server).
 -ProfanityFilter fixed to work properly, and not throw OutOfMemoryExceptions.
 -Anti-Caps and Anti-Spam features fixed to work properly now.
+-Fixed small Admin Security System bug.
+-If GeoIP is enabled, players connecting from local IP addresses (same network / machine) now have their countries shown as "Localhost" instead of "N/A".
 
 MCDawn 1.0.1.4
 -Building commands "throttle" redone, now goes on a scale of 1 to 200 (Determines how many blocks to set in 100 ms).
